[package]
name = "Binance_take_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = {version = "0.19.0", features = ["native-tls"]}
serde_json = "1.0"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
common_math = "0.2.1"